--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -2,6 +2,10 @@ project:
   name: quickstart-fortinet-fortigate
   owner: quickstart-eng@amazon.com
   package_lambda: false
+  parameters:
+    QSS3BucketName: $[taskcat_autobucket]
+    QSS3KeyPrefix: quickstart-fortinet-fortigate/
+    QSS3BucketRegion: $[taskcat_current_region]
   regions:
     - ap-east-1
     - ap-northeast-1
@@ -21,9 +25,10 @@ project:
     - us-east-2
     - us-west-1
     - us-west-2
-  s3_object_acl: public-read
-  tags: # [OPTIONAL] Tags to apply to CloudFormation template
-    taskcatReport: quickstart-fortinet-fortigate
+  #s3_object_acl: public-read
+  s3_regional_buckets: true
+  #tags: # [OPTIONAL] Tags to apply to CloudFormation template
+    #taskcatReport: quickstart-fortinet-fortigate
 tests:
   all-commercial-regions:
     parameters:
@@ -68,8 +73,6 @@ tests:
       PrivateSubnet2CIDR: 192.168.4.0/24
       PublicSubnet1CIDR: 192.168.1.0/24
       PublicSubnet2CIDR: 192.168.2.0/24
-      QSS3BucketName: $[taskcat_autobucket]
-      QSS3KeyPrefix: quickstart-fortinet-fortigate/
       ResourceTagPrefix: fortigate-autoscale-has-a-very-long-res-tag-prefix
       VPCCIDR: 192.168.0.0/16
     template: templates/autoscale-new-vpc.template.yaml
