--- a/templates/create-autoscale-handler.template.yaml
+++ b/templates/create-autoscale-handler.template.yaml
@@ -2,28 +2,37 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: >-
   This template creates a FortiGate Auto Scaling Handler Lambda function and an
-  API Gateway.
+  API Gateway. (qs-1s1i9r1sb)
+Metadata:
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9101
 Parameters:
   QSS3BucketName:
-    Type: String
-    AllowedPattern: '^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$'
-    ConstraintDescription: >-
-      Deployment resource S3 bucket name can include numbers, lowercase letters,
-      uppercase letters, and hyphens (-). It cannot start or end with a hyphen
+    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
+    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
+      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).
-    Description: >-
-      S3 bucket name for the Deployment package. Bucket name can include
-      numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot
-      start or end with a hyphen (-).
-  QSS3KeyPrefix:
+    Default: aws-quickstart
+    Description: S3 bucket name for the Quick Start assets. This string can include
+      numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
+      or end with a hyphen (-).
     Type: String
-    AllowedPattern: '^[0-9a-zA-Z-/]*$'
-    ConstraintDescription: >-
-      Deployment package S3 key prefix can include numbers, lowercase letters,
-      uppercase letters, hyphens (-), and forward slash (/).
-    Description: >-
-      S3 key prefix for the deployment package. Key prefix can include numbers,
-      lowercase letters, uppercase letters, hyphens (-), and forward slash (/).
+  QSS3KeyPrefix:
+    AllowedPattern: ^[0-9a-zA-Z-/.]*$
+    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
+      uppercase letters, hyphens (-), periods (.) and forward slash (/).
+    Default: quickstart-fortinet-fortigate/
+    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
+      can include numbers, lowercase letters, uppercase letters, hyphens (-), periods (.) and
+      forward slash (/).
+    Type: String
+  QSS3BucketRegion:
+    Default: 'us-east-1'
+    Description: Region where the Quick Start S3 bucket (QSS3BucketName) is
+      hosted. When using your own bucket, you must specify this value.
+    Type: String
   ResourceTagPrefix:
     Type: String
     AllowedPattern: '[0-9a-zA-Z@.#-]+'
@@ -86,9 +95,7 @@ Parameters:
     ConstraintDescription: value must be chosen from the provided options.
     Description: Deployment options for creating the BYOL license handler function.
 Conditions:
-  GovCloudCondition: !Equals
-    - !Ref 'AWS::Region'
-    - us-gov-west-1
+  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
   VpcEndpointIsDefined: !Not
     - !Equals
       - !Ref VpcEndPoint
@@ -105,17 +112,17 @@ Resources:
         QSS3KeyPrefix: !Ref QSS3KeyPrefix
         ObjectPaths: functions/packages/fgt-asg-handler.zip
       TemplateURL: !Sub
-        - >-
-          https://${QSS3BucketName}.${S3Region}.amazonaws.com/${QSS3KeyPrefix}templates/copy-objects.template.yaml
-        - S3Region: !If
-            - GovCloudCondition
-            - s3-us-gov-west-1
-            - s3
-          QSS3BucketName: !Ref QSS3BucketName
-          QSS3KeyPrefix: !Ref QSS3KeyPrefix
+        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/copy-objects.template.yaml'
+        - S3Region: !If [ UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion ]
+          S3Bucket: !If [ UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName ]
       TimeoutInMinutes: 5
   FgtAsgApiGateway:
     Type: 'AWS::ApiGateway::RestApi'
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+            - E9101
     Properties:
       Name: !Join
         - '-'
@@ -218,8 +225,8 @@ Resources:
     Type: 'AWS::IAM::Role'
     Properties:
       ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess'
-        - 'arn:aws:iam::aws:policy/AWSLambdaExecute'
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonS3ReadOnlyAccess
+        - !Sub arn:${AWS::Partition}:iam::aws:policy/AWSLambdaExecute
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -246,8 +253,7 @@ Resources:
                   - 'dynamodb:PutItem'
                   - 'dynamodb:UpdateItem'
                 Resource: !Sub
-                  - >-
-                    arn:aws:dynamodb:${AWS_REGION}:${AWS_ACCOUNT_ID}:table/${TABLE_NAME_PREFIX}*
+                  - arn:${AWS::Partition}:dynamodb:${AWS_REGION}:${AWS_ACCOUNT_ID}:table/${TABLE_NAME_PREFIX}*
                   - AWS_REGION: !Ref 'AWS::Region'
                     AWS_ACCOUNT_ID: !Ref 'AWS::AccountId'
                     TABLE_NAME_PREFIX: !Ref ResourceTagPrefix
@@ -284,8 +290,7 @@ Resources:
                   - 'autoscaling:DetachInstances'
                   - 'autoscaling:RecordLifecycleActionHeartbeat'
                 Resource: !Sub
-                  - >-
-                    arn:aws:autoscaling:${AWS_REGION}:${AWS_ACCOUNT_ID}:autoScalingGroup:*:autoScalingGroupName/${ASG_NAME}*
+                  - arn:${AWS::Partition}:autoscaling:${AWS_REGION}:${AWS_ACCOUNT_ID}:autoScalingGroup:*:autoScalingGroupName/${ASG_NAME}*
                   - AWS_REGION: !Ref 'AWS::Region'
                     AWS_ACCOUNT_ID: !Ref 'AWS::AccountId'
                     ASG_NAME: !Ref ResourceTagPrefix
@@ -325,17 +330,21 @@ Resources:
                   - 'ec2:DeleteTags'
                   - 'ec2:DescribeVpcs'
                   - 'ec2:DescribeSubnets'
-                Resource: '*'
+                Resource: !Sub
+                  - arn:${AWS::Partition}:autoscaling:${AWS_REGION}:${AWS_ACCOUNT_ID}:autoScalingGroup:*:autoScalingGroupName/${ASG_NAME}*
+                  - AWS_REGION: !Ref 'AWS::Region'
+                    AWS_ACCOUNT_ID: !Ref 'AWS::AccountId'
+                    ASG_NAME: !Ref ResourceTagPrefix
               - Effect: Allow
                 Action:
                   - 'apigateway:GET'
                 Resource: !Sub
-                  - 'arn:aws:apigateway:${AWS_REGION}::*'
+                  - arn:${AWS::Partition}:apigateway:${AWS_REGION}::*
                   - AWS_REGION: !Ref 'AWS::Region'
               - Effect: Allow
                 Action: 's3:GetObject'
                 Resource: !Sub
-                  - 'arn:aws:s3:::${bucketname}/${keyprefix}assets/configset/*'
+                  - arn:${AWS::Partition}:s3:::${bucketname}/${keyprefix}assets/configset/*
                   - bucketname: !Ref QSS3BucketName
                     keyprefix: !Ref QSS3KeyPrefix
               - Effect: Allow
@@ -352,8 +361,7 @@ Resources:
                   - 'lambda:InvokeFunction'
                   - 'lambda:InvokeAsync'
                 Resource: !Sub
-                  - >-
-                    arn:aws:lambda:${AWS_REGION}:${AWS_ACCOUNT_ID}:function:${CUSTOM_ID}-*
+                  - arn:${AWS::Partition}:lambda:${AWS_REGION}:${AWS_ACCOUNT_ID}:function:${CUSTOM_ID}-*
                   - AWS_REGION: !Ref 'AWS::Region'
                     AWS_ACCOUNT_ID: !Ref 'AWS::AccountId'
                     CUSTOM_ID: !Ref CustomIdentifier
@@ -364,14 +372,12 @@ Resources:
                   - 'elasticloadbalancing:DeregisterTargets'
                 Resource:
                   - !Sub
-                    - >-
-                      arn:aws:elasticloadbalancing:${AWS_REGION}:${AWS_ACCOUNT_ID}:loadbalancer/net/${CUSTOM_ID}*/*
+                    - arn:${AWS::Partition}:elasticloadbalancing:${AWS_REGION}:${AWS_ACCOUNT_ID}:loadbalancer/net/${CUSTOM_ID}*/*
                     - AWS_REGION: !Ref 'AWS::Region'
                       AWS_ACCOUNT_ID: !Ref 'AWS::AccountId'
                       CUSTOM_ID: !Ref CustomIdentifier
                   - !Sub
-                    - >-
-                      arn:aws:elasticloadbalancing:${AWS_REGION}:${AWS_ACCOUNT_ID}:targetgroup/${CUSTOM_ID}*/*
+                    - arn:${AWS::Partition}:elasticloadbalancing:${AWS_REGION}:${AWS_ACCOUNT_ID}:targetgroup/${CUSTOM_ID}*/*
                     - AWS_REGION: !Ref 'AWS::Region'
                       AWS_ACCOUNT_ID: !Ref 'AWS::AccountId'
                       CUSTOM_ID: !Ref CustomIdentifier
@@ -442,6 +448,11 @@ Resources:
         - Key: ResourceGroup
           Value: !Ref ResourceTagPrefix
   LambdaPermissionFgtAsgHandler:
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+            - E9101
     Type: 'AWS::Lambda::Permission'
     Properties:
       FunctionName: !GetAtt
@@ -450,7 +461,7 @@ Resources:
       Action: 'lambda:InvokeFunction'
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub
-        - 'arn:aws:execute-api:${region}:${account}:${api}/*'
+        - 'arn:${AWS::Partition}:execute-api:${region}:${account}:${api}/*'
         - region: !Ref 'AWS::Region'
           account: !Ref 'AWS::AccountId'
           api: !Ref FgtAsgApiGateway
@@ -488,6 +499,11 @@ Resources:
         - Key: ResourceGroup
           Value: !Ref ResourceTagPrefix
   LambdaPermissionByolLicenseHandler:
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+            - E9101
     Type: 'AWS::Lambda::Permission'
     Condition: CreateByolLicenseHandler
     Properties:
@@ -497,7 +513,7 @@ Resources:
       Action: 'lambda:InvokeFunction'
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub
-        - 'arn:aws:execute-api:${region}:${account}:${api}/*'
+        - 'arn:${AWS::Partition}:execute-api:${region}:${account}:${api}/*'
         - region: !Ref 'AWS::Region'
           account: !Ref 'AWS::AccountId'
           api: !Ref FgtAsgApiGateway
@@ -508,8 +524,7 @@ Outputs:
   FgtAsgHandlerApiGatewayUrl:
     Description: API Gateway URL of the FortiGate Auto Scaling Handler
     Value: !Sub
-      - >-
-        https://${gatewayId}.execute-api.${region}.amazonaws.com/prod/fgt-asg-handler
+      - https://${gatewayId}.execute-api.${region}.amazonaws.com/prod/fgt-asg-handler
       - region: !Ref 'AWS::Region'
         gatewayId: !Ref FgtAsgApiGateway
   FgtAsgHandlerFunctionName:
